SERVER-10428 fassert on C runtime failures in Windows debug build