src/mongo/util/stacktrace.cpp
@@ -280,9 +280,9 @@ namespace mongo {
     int crtDebugCallback(int, char* originalMessage, int*) {
         StringData message(originalMessage);
         log() << "*** C runtime error: "
-              << message.substr(0, message.find('\n')) << std::endl;
-        printStackTrace();
-        return 1;           // 0 == not handled, non-0 == handled
+              << message.substr(0, message.find('\n'))
+              << ", terminating" << std::endl;
+        fassertFailed( 17006 );
     }
 
 }
